# dtm

./: .gitignore  CMakeLists.txt  README.md  setup.cfg  setup.py
doc/: doc_en  dtm.md
dtm/: data.c  gsl-wrappers.c  lda-seq.c  lda-seq.h  lda.h  main.c  param.c
dtm-parallel/: main-aggregate-ss.c  main-fit_seq_docs.c  main-fit_seq_topics.c  main-lda-e-step.c  main-lda-m-step.c  main.c
dtmpy/: model.py
src/: README.md
src/dtm/: data.cpp  dtm.cpp  dtm.hpp  gsl-wrappers.cpp  gsl-wrappers.hpp  lda-seq.cpp  lda.cpp  params.hpp  ss-lm.cpp  util.cpp  util.hpp
src/dtmpy/: CMakeLists.txt  dtmpy.cpp
